--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "^10.4.17",
     "axios": "^1.6.7",
     "dotenv": "^16.4.4",
+    "framer-motion": "^11.0.25",
     "jsonwebtoken": "^9.0.2",
     "postcss": "^8.4.33",
     "react": "^18.2.0",
