--- a/Server/CSharpServer/Server.csproj
+++ b/Server/CSharpServer/Server.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
+        <ContainerUser>root</ContainerUser>
         <TargetFramework>net8.0</TargetFramework>
     </PropertyGroup>
 
