--- a/Server/CSharpServer/Server.csproj
+++ b/Server/CSharpServer/Server.csproj
@@ -13,4 +13,10 @@
         <PackageReference Include="MySql.Data" Version="8.0.28" />
     </ItemGroup>
 
+    <ItemGroup>
+        <Content Update="StoreImages\**">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
+
 </Project>
