--- a/Server/CSharpServer/Server.csproj
+++ b/Server/CSharpServer/Server.csproj
@@ -9,11 +9,10 @@
     <ItemGroup>
         <PackageReference Include="DotNetEnv" Version="3.0.0"/>
         <PackageReference Include="Microsoft.AspNetCore.App" Version="6.0.0" />
-        <PackageReference Include="IdentityModel.AspNetCore" Version="4.3.0" />
-        <Compile Update="Server.cs" CopyToOutputDirectory="PreserveNewest" />
-        <PackageReference Include="MySql.Data" Version="8.0.28" />
-        <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.15.0" />
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.15.1" />
+        <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" Version="6.15.1" />
         <PackageReference Include="BCrypt.Net-Next" Version="4.0.2" />
+        <PackageReference Include="MySql.Data" Version="8.0.28" />
     </ItemGroup>
 
     <ItemGroup>
